[project]
name = "msys2-autobuild-controller"
version = "0.1.0"
description = ""
authors = [{ name = "Jeremy Drake", email = "github@jdrake.com" }]
requires-python = ">=3.12.0,<4.0"
dependencies = [
    "Flask>=3.0.2,<4",
    "requests>=2.25.1,<3",
    "cryptography>=3.4.7",
    "PyGithub>=2.2.0,<3",
    "gunicorn>=23.0.0,<24",
]

[dependency-groups]
dev = [
    "mypy==1.19.0",
    "ruff>=0.14.10,<0.15.0",
    "types-requests>=2.31.0.20240125,<3",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 133
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E741", "E402"]
